--- a/index.html
+++ b/index.html
@@ -115,6 +115,17 @@
       font-weight: 700;
       padding: 30px 20px;
     }
+
+    .save-btn {
+      margin-top: 18px;
+      background: #ff4d6d;
+      color: white;
+      padding: 12px 16px;
+      border-radius: 999px;
+      border: none;
+      font-size: 1.05rem;
+      cursor: pointer;
+    }
   </style>
 </head>
 
@@ -135,14 +146,18 @@
     <div style="font-size: 2.2rem;">💞</div>
     <div style="margin-top: 15px;">Screenshot this 😘</div>
     <div style="margin-top: 10px; font-size: 0.9rem; color: #777;">
-      (Hold the power button + volume up to screenshot)
+      (Tap below to save as image)
     </div>
+    <button class="save-btn" onclick="saveScreenshot()">Save as Image</button>
   </div>
 
-  <!-- Soft music (autoplay is blocked on mobile, so we play after tap) -->
+  <!-- Soft music -->
   <audio id="music" loop>
     <source src="https://cdn.pixabay.com/download/audio/2021/08/04/audio_9a3b2f0a7c.mp3?filename=soft-love-ambient-11006.mp3" type="audio/mpeg">
   </audio>
+
+  <!-- html2canvas -->
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 
   <script>
     let noCount = 0;
@@ -177,14 +192,11 @@
       document.getElementById("message").innerText =
         "YAY!! 💕 I can’t wait 😍";
 
-      // Play music (allowed because user tapped)
       const music = document.getElementById("music");
       music.play().catch(() => {});
 
-      // Confetti
       launchConfetti();
 
-      // Final screen after 1.2 seconds
       setTimeout(() => {
         document.getElementById("mainCard").style.display = "none";
         document.getElementById("finalCard").style.display = "block";
@@ -215,7 +227,18 @@
         setTimeout(() => confetti.remove(), 3000);
       }
     }
-  </script>
 
+    // Save screenshot as image
+    function saveScreenshot() {
+      const finalCard = document.getElementById("finalCard");
+
+      html2canvas(finalCard).then(canvas => {
+        const link = document.createElement("a");
+        link.download = "valentine.png";
+        link.href = canvas.toDataURL("image/png");
+        link.click();
+      });
+    }
+  </script>
 </body>
 </html>
