--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
   <div class="card final" id="finalCard">
     <div style="font-size: 2.2rem;">💞</div>
-    <div style="margin-top: 15px;">Screenshot this 😘</div>
+    <div style="margin-top: 15px;">I LOVE YOU 😘</div>
     <div class="hide-for-screenshot" style="margin-top: 10px; font-size: 0.9rem; color: #777;">
       (Tap below to save as image)
     </div>
@@ -254,3 +254,4 @@
   </script>
 </body>
 </html>
+
