--- a/index.html
+++ b/index.html
@@ -114,10 +114,16 @@
       color: #ff4d6d;
       font-weight: 700;
       padding: 30px 20px;
+
+      /* center everything */
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 14px;
     }
 
     .save-btn {
-      margin-top: 18px;
       background: #ff4d6d;
       color: white;
       padding: 12px 16px;
@@ -125,6 +131,8 @@
       border: none;
       font-size: 1.05rem;
       cursor: pointer;
+      width: 100%;
+      max-width: 240px;
     }
 
     /* hidden while screenshot */
@@ -150,7 +158,7 @@
   <div class="card final" id="finalCard">
     <div style="font-size: 2.2rem;">💞</div>
     <div style="margin-top: 15px;">I LOVE YOU 😘</div>
-    <div class="hide-for-screenshot" style="margin-top: 10px; font-size: 0.9rem; color: #777;">
+    <div class="hide-for-screenshot" style="font-size: 0.9rem; color: #777;">
       (Tap below to save as image)
     </div>
     <button class="save-btn hide-for-screenshot" onclick="saveScreenshot()">Save as Image</button>
@@ -204,7 +212,7 @@
 
       setTimeout(() => {
         document.getElementById("mainCard").style.display = "none";
-        document.getElementById("finalCard").style.display = "block";
+        document.getElementById("finalCard").style.display = "flex";
       }, 1200);
     }
 
@@ -254,4 +262,3 @@
   </script>
 </body>
 </html>
-
