--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     /* Final screen (STARTS HIDDEN) */
     .final {
-      display: none;          /* THIS MUST STAY */
+      display: none;
       font-size: 1.3rem;
       color: #ff4d6d;
       font-weight: 700;
@@ -123,18 +123,6 @@
 
     .save-btn {
       background: #ff4d6d;
-      color: white;
-      padding: 12px 16px;
-      border-radius: 999px;
-      border: none;
-      font-size: 1.05rem;
-      cursor: pointer;
-      width: 100%;
-      max-width: 240px;
-    }
-
-    .share-btn {
-      background: #25D366;
       color: white;
       padding: 12px 16px;
       border-radius: 999px;
@@ -182,7 +170,6 @@
       (Tap below to save as image)
     </div>
     <button class="save-btn hide-for-screenshot" onclick="saveScreenshot()">Save as Image</button>
-    <button class="share-btn hide-for-screenshot" onclick="shareWhatsApp()">Share on WhatsApp</button>
 
     <div class="watermark">Made with ❤️</div>
   </div>
@@ -284,14 +271,6 @@
 
         hiddenItems.forEach(el => el.style.display = "block");
       });
-    }
-
-    function shareWhatsApp() {
-      const url = window.location.href;
-      const text = encodeURIComponent(
-        `Hey ${recipientName}! 💘\n\nOpen this: ${url}`
-      );
-      window.open(`https://wa.me/?text=${text}`, "_blank");
     }
   </script>
 </body>
