--- a/index.html
+++ b/index.html
@@ -12,23 +12,40 @@
       margin: 0;
       height: 100vh;
       overflow: hidden;
-      background: linear-gradient(135deg, #ffdde1, #ee9ca7);
       display: flex;
       align-items: center;
       justify-content: center;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+
+      /* ✨ CUSTOM BACKGROUND */
+      background: radial-gradient(circle at top left, #ffd1dc 0%, #ff7aa6 45%, #f06 100%);
+
+      /* subtle heart pattern */
+      background-image:
+        radial-gradient(circle at 20% 20%, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0) 40%),
+        radial-gradient(circle at 80% 30%, rgba(255,255,255,0.25) 0%, rgba(255,255,255,0) 45%),
+        radial-gradient(circle at 50% 80%, rgba(255,255,255,0.2) 0%, rgba(255,255,255,0) 40%);
     }
 
     .card {
-      background: white;
       width: 90%;
       max-width: 360px;
       padding: 30px 20px;
       border-radius: 26px;
       text-align: center;
-      box-shadow: 0 15px 40px rgba(0,0,0,0.15);
       position: relative;
       z-index: 2;
+
+      /* ✨ HEART BORDER */
+      border: 4px solid #ff4d6d;
+      clip-path: path("M 50 15
+        C 35 -5, 0 15, 0 45
+        C 0 80, 50 110, 50 140
+        C 50 110, 100 80, 100 45
+        C 100 15, 65 -5, 50 15 Z");
+      transform: scale(1);
+      background: white;
+      box-shadow: 0 15px 40px rgba(0,0,0,0.15);
     }
 
     h1 {
