--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
   <style>
     * { box-sizing: border-box; }
 
-    body {
+    html, body {
+      width: 100%;
+      height: 100%;
       margin: 0;
-      height: 100vh;
-      overflow: hidden;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      overflow: hidden; /* prevents scrolling */
+    }
+
+    body {
       display: flex;
       align-items: center;
       justify-content: center;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background: radial-gradient(circle at top left, #ffd1dc 0%, #ff7aa6 45%, #f06 100%);
     }
 
@@ -29,11 +33,11 @@
       flex-direction: column;
       align-items: center;
       justify-content: space-between;
-      padding: 22px 16px;
+      padding: 18px 16px;
+      z-index: 2;
     }
 
-    /* Decorative top area */
-    .top-decor {
+    .top-decor, .bottom-decor {
       width: 100%;
       display: flex;
       justify-content: space-between;
@@ -42,13 +46,19 @@
       padding: 6px 10px;
     }
 
-    .top-heart {
+    .top-heart, .bottom-heart {
       font-size: 22px;
       opacity: 0.8;
       animation: floatUp 6s linear infinite;
     }
 
-    /* Middle card section */
+    @keyframes floatUp {
+      0% { transform: translateY(0); opacity: 0.5; }
+      50% { opacity: 1; }
+      100% { transform: translateY(-50px); opacity: 0; }
+    }
+
+    /* Center card */
     .center-card {
       width: 100%;
       max-width: 420px;
@@ -109,27 +119,6 @@
       font-weight: 600;
     }
 
-    /* Bottom decor */
-    .bottom-decor {
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      gap: 12px;
-      padding-bottom: 8px;
-    }
-
-    .bottom-heart {
-      font-size: 22px;
-      opacity: 0.8;
-      animation: floatUp 5s linear infinite;
-    }
-
-    @keyframes floatUp {
-      0% { transform: translateY(0); opacity: 0.5; }
-      50% { opacity: 1; }
-      100% { transform: translateY(-50px); opacity: 0; }
-    }
-
     /* Background hearts + sparkles */
     .bg-hearts, .sparkles {
       position: fixed;
@@ -182,6 +171,7 @@
       gap: 14px;
       padding: 24px;
       text-align: center;
+      z-index: 2;
     }
 
     .save-btn {
@@ -209,7 +199,7 @@
       display: block;
     }
 
-    /* Square screenshot wrapper */
+    /* Square screenshot wrapper (hidden without affecting layout) */
     #screenshotWrap {
       width: 360px;
       height: 360px;
@@ -219,6 +209,7 @@
       position: fixed;
       left: -9999px;
       top: -9999px;
+      z-index: -1;
     }
 
   </style>
@@ -233,14 +224,12 @@
   <!-- Full screen card -->
   <div class="screen-card" id="screenCard">
 
-    <!-- Top decor -->
     <div class="top-decor">
       <div class="top-heart">💖</div>
       <div class="top-heart">💗</div>
       <div class="top-heart">💞</div>
     </div>
 
-    <!-- Center content -->
     <div class="center-card" id="mainCard">
       <h1 id="title">Alex, will you be my Valentine? 💘</h1>
 
@@ -252,7 +241,6 @@
       <div id="message"></div>
     </div>
 
-    <!-- Bottom decor -->
     <div class="bottom-decor">
       <div class="bottom-heart">💗</div>
       <div class="bottom-heart">💘</div>
